--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/extension-accelerate": "^0.6.3",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.17",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "prisma": "^5.9.1"
   }
 }
