--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "@prisma/extension-accelerate": "^0.6.3",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.17",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.2",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.9.1"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.5"
   }
 }
