--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/extension-accelerate": "^0.6.3",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.17",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
