--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^16.4.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.9.1"
+    "prisma": "^5.9.1",
+    "stripe": "^14.17.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.5"
