--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
+    "@stripe/stripe-js": "^3.0.5",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.3",
     "react": "^18.2.0",
